--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "testJ": "jest",
     "dev": "cross-env NODE_ENV=development webpack --mode development",
     "build": "cross-env NODE_ENV=production webpack --mode production",
     "watch": "cross-env NODE_ENV=development webpack --mode development --watch",
@@ -28,8 +29,8 @@
     "eslint-loader": "^4.0.2",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.4.1",
+    "jest": "^26.4.2",
     "mini-css-extract-plugin": "^0.11.0",
-    "moment-locales-webpack-plugin": "^1.2.0",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
@@ -43,7 +44,6 @@
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
     "docxtemplater": "^3.19.3",
-    "moment": "^2.27.0",
     "normalize.css": "^8.0.1",
     "pizzip": "^3.0.6"
   }
